--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,14 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
+     <% if user_signed_in? %>
+       <p>こんにちわ, <%= current_user.email %></p>
+       <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+     <% else %>
+       <%= link_to "サインイン", new_user_session_path %>
+       <%= link_to "ユーザ登録", new_user_registration_path %>
+     <% end %>
+    <hr>
     <%= yield %>
   </body>
 </html>
