--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,10 @@
 <h1>プロフィール</h1>
 
-<h3>メールアドレス</h3>
+<p>
+  <% if @user.avatar.attached? %>
+    <%= image_tag @user.avatar %>
+  <% end %>
+</p>
 
+<h3>名前</h3>
 <%= @user.email %>
